# xinghe-lab

./: .dockerignore  .env.docker.example  .env.prod.example  .env.production  .gitignore  DESIGN.md  GEMINI.md  Makefile  PRODUCT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  quick-start.sh  start-services.sh  start_services.ps1  stop-services.sh  开发团队成员算法开发规范（必看）.md  项目启动指南.md
api/: .env.example  .gitignore  Dockerfile  README.md  create_user_model.py  pyproject.toml  requirements.txt  sql_app.db
api/app/: main.py
api/app/core/: config.py  db.py  logging_config.py  security.py
api/app/models/: models.py
api/app/schemas/: schemas.py  user.py
api/app/tasks/: cv_tasks.py
api/app/utils/: logger.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  SECURITY_DEPLOYMENT.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  create_dirs.py  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  requirements.txt  run_backend.ps1  run_script.bat  run_setup.bat  run_worker.ps1  setup_dirs.py  setup_modules.js
backend/alembic/: env.py
backend/alembic/versions/: 202505140001_add_uploaded_files.py  202604030645_create_users_table.py  202604030646_add_user_profile_columns.py  202604180001_add_role_and_new_tables.py  202604200001_promote_first_user_to_admin.py  202605150001_merge_heads.py  202605220001_add_sensitivity_records.py  5b8d8b36f3e8_add_taskrecord.py  8c4d5e9f0a12_merge_heads.py
backend/app/: main.py
backend/scripts/: clear_db.py
backend/tests/: test_models_routes.py  test_pgd.py
(+380 files in other folders)
