[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "captcha>=0.7.1",
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "numpy>=2.4.2",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.21",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
